WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308570
Crash in `SpeechRecognitionServer::sendUpdate`
https://bugs.webkit.org/show_bug.cgi?id=308570
Summary
Crash in `SpeechRecognitionServer::sendUpdate`
Charlie Wolfe
Reported
2026-02-24 12:11:31 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2026-02-24 12:11:32 PST
<
rdar://problem/140082708
>
Charlie Wolfe
Comment 2
2026-02-24 12:12:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59353
EWS
Comment 3
2026-02-24 18:12:23 PST
Committed
308166@main
(fc1b5e8317bd): <
https://commits.webkit.org/308166@main
> Reviewed commits have been landed. Closing PR #59353 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug