Cherry-pick 308166@main (fc1b5e8317bd). https://bugs.webkit.org/show_bug.cgi?id=308570

Crash in `SpeechRecognitionServer::sendUpdate`
    https://bugs.webkit.org/show_bug.cgi?id=308570
    rdar://140082708

    Reviewed by Rupin Mittal.

    sendUpdate() can be called after the web process has been terminated. Don't send a message in this
    case to avoid crashing.

    * Source/WebKit/UIProcess/SpeechRecognitionServer.cpp:
    (WebKit::SpeechRecognitionServer::sendUpdate):

    Canonical link: https://commits.webkit.org/308166@main

Canonical link: https://commits.webkit.org/298234.443@webkitglib/2.50